# X-bot

./: .gitignore  PI_SETUP.md  README.md
src/assem6/: CMakeLists.txt  package.xml
src/assem6/Assem6/: CMakeLists.txt  package.xml
src/assem6/Assem6/config/: barista.rviz  path_planning.rviz  recipes.yaml
src/assem6/Assem6/launch/: barista.launch.py  display.launch.py  gazebo.launch.py
src/assem6/Assem6/scripts/: barista_robot.py  ik_solver.py  path_planning_demo.py
src/assem6/Assem6/urdf/: Assem6.urdf
src/assem6/config/: controllers.yaml  ros2_controllers.yaml  rviz.rviz
src/assem6/launch/: barista.launch.py  barista_gazebo.launch.py  display.launch.py  gazebo.launch.py  path_planning.launch.py  position_finder.launch.py  rviz_gui.launch.py
src/assem6/scripts/: barista_gui.py  barista_robot.py  joint_controller.py  path_planner_node.py  position_finder.py
src/assem6/urdf/: Assem6.urdf  Assem6_hardware.urdf  assem6_gazebo.urdf
src/assem6/worlds/: barista_world.sdf
src/assem6_hardware/: package.xml  setup.cfg  setup.py
src/assem6_hardware/assem6_hardware/: __init__.py  barista_standalone.py  calibrate_servos.py  diagnose.py  servo_bridge_node.py  servo_driver.py  servo_test.py
src/assem6_hardware/config/: servo_config.yaml
src/assem6_hardware/launch/: hardware.launch.py
src/assem6_hardware/resource/: assem6_hardware
src/assem6_hardware/scripts/: fix_and_setup.sh  setup_pi.sh
src/assem6_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/assem6_moveit_config/config/: Assem6.srdf  moveit_controllers.yaml  ros2_controllers.yaml
src/assem6_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/assem6_moveit_config/scripts/: run_scenario.py
