<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>assem6_hardware</name>
  <version>1.0.0</version>
  <description>Hardware interface for Assem6 barista robot arm on Raspberry Pi 4 using PCA9685 servo driver</description>
  <maintainer email="todo@email.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
